--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
     "axios": "^0.19.0",
+    "dotenv": "^8.1.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-scripts": "3.1.2"
